--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/buyback
+      url: jdbc:mysql://127.0.0.1:3306/isfinal
       username: root
       password: wjb
       max-active: 20
@@ -41,9 +41,9 @@ spring:
       restart:
         exclude: templates/**,static/**
 #==================================================mybatis========================================#
-  mybatis:
-    config-location: classpath:/mybatis-config.xml
-    mapper-locations: classpath:mapper/*.xml
+mybatis:
+  config-location: classpath:/mybatis-config.xml
+  mapper-locations: classpath:mapper/*.xml
 #==================================================redis========================================#
   redis:
       database: 0
