--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
-    port: 80
+    port: 8090
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
 #==================================================dataSource========================================#
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
