--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,34 @@
 			<version>2.0.2.Final</version>
 		</dependency>
 
+		<!--FastDFS -->
+		<dependency>
+			<groupId>org.csource.fastdfs</groupId>
+			<artifactId>fastdfs_client</artifactId>
+			<version>1.24</version>
+		</dependency>
+		<dependency>
+			<groupId>fastdfs</groupId>
+			<artifactId>fastdht-client</artifactId>
+			<version>1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<!--Pool -->
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
 
 
 	</dependencies>
