--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,11 @@ spring:
     expose-request-attributes: true
     request-context-attribute: request
     content-type: text/html
+  mvc:
+    view:
+      prefix: classpath:/templates/
+      suffix: .html
+      static-path-pattern: classpath:/static
 #===================================================mvc========================================#
   http:
     multipart:
