--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       url: jdbc:mysql://127.0.0.1:3306/isfinal
       username: root
-      password: wjb
+      password: root
       max-active: 20
       initial-size: 1
       max-wait: 60000
