--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
 #==================================================dataSource========================================#
   datasource:
       type: com.alibaba.druid.pool.DruidDataSource
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/isfinal
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1:3306/isfinal?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
       username: root
       password: root
       max-active: 20
