--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,13 @@
 			<version>8.0.21</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>7.0.2</version>
+		</dependency>
+
+
 
 	</dependencies>
 
